-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.6.2, Qt Creator 2.7.2, Qt Creator 2.8.0-rc
-
Windows Vista 64 bit
Windows 7 64 bit
-
a4337db4aba8a205616905389fed5e6b17a0922f
- Create a new Qt Designer Form Class.
- Right-click on the form and select "Go to slot..." from the context menu.
- Select an item from the list and click "OK".
Creator will show an error message: "Internal error: No project could be found for C:/Users/rob/dialog.ui."
Creator should just use the class's header- and source file which are open in their respective editor.
- relates to
-
QTCREATORBUG-2516 Designer intgegration: "go to slot" yields "Internal error : No project could be found" , but cant select a project either
-
- Closed
-
-
QTCREATORBUG-9683 "Go to slot..." in design mode: "No documents matching 'ui_mainwindow.h' could be found"
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-9653 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
61568,7 | Designer: Fix "Go to slot..." for project-less "Qt Designer Form Class"es | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |