Designer: Fix "Go to slot..." for project-less "Qt Designer Form Class"es

Task-number: QTCREATORBUG-9653
Change-Id: Ia50c295ee474d08b3fb0574a4f759a8ab901876a
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>