tests/designer/gotoslot_withoutProject/form.h
@@ -1,0 +1,24 @@
+// Copyright header
+
+#ifndef FORM_H
+#define FORM_H
+
+#include <QWidget>
+
+namespace Ui {
+class Form;
+}
+
+class Form : public QWidget
+{
+    Q_OBJECT
+
+public:
+    explicit Form(QWidget *parent = 0);
+    ~Form();
+
+private:
+    Ui::Form *ui;
+};
+
+#endif // FORM_H
